tg-669 Splitsing endpoints, clarifing its usage in swagger
